[IMP] website_sale,sale: UI glitches for ecommerce product - product option wizard UI issue for product variant - cart summary box is too wide

--- a/addons/sale/static/src/scss/product_configurator.scss
+++ b/addons/sale/static/src/scss/product_configurator.scss
@@ -119,7 +119,9 @@ label.css_attribute_color.css_not_available {
     .remove-optionnal-item, .add-optionnal-item {
         padding-left: 5px;
     }
+}
 
+.oe_website_sale {
     .td-product_name {
         word-wrap: break-word;
     }
